--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.11.15",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "random-number": "0.0.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
